# terraform-aws-cloudtrail-to-slack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.tf  dynamodb.tf  main.tf  outputs.tf  pyproject.toml  requirements.txt  ruff.toml  s3_sns.tf  setup.sh  sns.tf  test.sh  vars.tf  versions.tf
.github/workflows/: base.yml  review.yml
docs/: SNS_FANOUT.md  TEST_SUMMARY.md  part2.md
examples/s3_sns_configuration/: README.md  main.tf  outputs.tf  variables.tf
examples/slack_app_configuration/: README.md  main.tf  outputs.tf  versions.tf
examples/slack_webhook_configuration/: README.md  main.tf
examples/sns_fanout_configuration/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
src/: config.py  deploy_requirements.txt  dynamodb.py  errors.py  main.py  pyproject.toml  requirements.txt  rules.py  slack_helpers.py  sns.py
src/docker/: Dockerfile
src/docs/: eventbridge-support.md
src/tests/: conftest.py  test_config.py  test_dynamodb_operations.py  test_event_formats.py  test_event_processing.py  test_events.json  test_message_processing.py  test_rules.py  test_slack_integration.py  test_sns_event.json  test_sns_format.py  test_sns_operations.py
test/: events.json
